fini pour de bon!

--- a/formulaire.html
+++ b/formulaire.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="agenda.css">
 		<meta charset="utf-8"/>
-        <title>Agenda</title>
+        <title>Agenda-ajouter-</title>
 
     </head>
 <body>
